--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,64 +1,125 @@
-alembic==1.15.2
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.1.0
+aiofiles==24.1.0
+anyio==4.1.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.13.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
 blinker==1.9.0
-certifi==2025.1.31
-click==8.1.8
-click-plugins==1.1.1
-cligj==0.7.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.2.0
 colorama==0.4.6
-contourpy==1.3.1
+comm==0.2.0
+contourpy==1.2.0
 cycler==0.12.1
-Cython==3.0.12
-dotenv==0.9.9
-fastapi==0.115.11
-fiona==1.10.1
-Flask==2.0.1
-flask-cors==5.0.1
-Flask-Migrate==3.1.0
-Flask-SQLAlchemy==2.5.1
-fonttools==4.56.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.0.1
+fastjsonschema==2.19.0
+Flask==3.1.1
+flask-cors==6.0.0
+fonttools==4.46.0
+fqdn==1.5.1
 geopandas==1.0.1
-grafanalib==0.7.1
-greenlet==3.1.1
-h11==0.14.0
-idna==3.10
-importlib==1.0.4
+idna==3.6
+imageio==2.33.0
+ipykernel==6.27.1
+ipython==8.18.1
+ipywidgets==8.1.1
+isoduration==20.11.0
 itsdangerous==2.2.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
-Mako==1.3.9
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-numpy==2.2.3
-packaging==24.2
+jedi==0.19.1
+Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.11.1
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.9
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+kiwisolver==1.4.5
+lazy_loader==0.3
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mistune==3.0.2
+nbclient==0.9.0
+nbconvert==7.11.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+networkx==3.2.1
+notebook==7.0.6
+notebook_shim==0.2.3
+numpy==1.26.2
+overrides==7.4.0
+packaging==23.2
 pandas==2.2.3
-pillow==11.1.0
-prometheus_client==0.21.1
-prometheus_flask_exporter==0.23.2
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyogrio==0.10.0
-pyparsing==3.2.1
+pandocfilters==1.5.0
+parso==0.8.3
+Pillow==10.1.0
+platformdirs==4.0.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.17.2
+pyogrio==0.11.0
+pyparsing==3.1.1
 pyproj==3.7.1
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.17.0
-pyshp==2.3.1
-python-dateutil==2.9.0.post0
-python-dotenv==0.19.1
-python-multipart==0.0.20
-pytz==2025.1
-setuptools==78.1.0
-shapely==2.0.7
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-starlette==0.46.1
-typing_extensions==4.12.2
-tzdata==2025.1
-uvicorn==0.34.0
-Werkzeug==2.0.1
-wheel==0.45.1
-zipfile36==0.1.3
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2025.2
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.31.1
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.13.2
+scikit-image==0.22.0
+scipy==1.11.4
+Send2Trash==1.8.2
+setuptools==69.0.2
+shapely==2.1.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+terminado==0.18.0
+tifffile==2023.9.26
+tinycss2==1.2.1
+tornado==6.4
+traitlets==5.14.0
+types-python-dateutil==2.8.19.14
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.1.0
+vboxapi==1.0
+wcwidth==0.2.12
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.4
+Werkzeug==3.1.3
+widgetsnbextension==4.0.9
+
